<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <TextView
        android:id="@+id/gtv_join_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/join_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_introduction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/introduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gtv_join_us"
        app:layout_constraintTop_toBottomOf="@+id/gtv_join_us" />

    <com.firdan.storyapp.customview.CustomEditText
        android:id="@+id/addName"
        style="@style/EditText"
        android:layout_marginTop="48dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/tv_introduction"
        app:layout_constraintStart_toStartOf="@+id/tv_introduction"
        app:layout_constraintTop_toBottomOf="@+id/tv_introduction" />

    <com.firdan.storyapp.customview.EmailEditText
        android:id="@+id/addEmail"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/addName"
        app:layout_constraintStart_toStartOf="@+id/addName"
        app:layout_constraintTop_toBottomOf="@+id/addName" />

    <com.firdan.storyapp.customview.PasswordEditText
        android:id="@+id/addPassword"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/addEmail"
        app:layout_constraintStart_toStartOf="@+id/addEmail"
        app:layout_constraintTop_toBottomOf="@+id/addEmail" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/register_this_account"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/addPassword"
        app:layout_constraintStart_toStartOf="@+id/addPassword"
        app:layout_constraintTop_toBottomOf="@+id/addPassword" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/tv_have_account"
        app:layout_constraintEnd_toStartOf="@+id/tv_have_account"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toTopOf="@id/tv_have_account"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/tv_have_account"
        style="@style/Text.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/tv_have_account"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
        app:layout_constraintTop_toTopOf="@id/tv_have_account"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/login_instead"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/line2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/line1"
        app:layout_constraintTop_toBottomOf="@+id/tv_have_account" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>